--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -43,6 +43,7 @@ block scripts
   script(defer src='./assets/scripts/home.js')
 block content
   //- include ../includes/breadcrumbs.pug
+  +svg('arrow')
   section.home-section-0
     .home-slider.js-slider
       .gallery-slider
