--- a/src/assets/styles/header.scss
+++ b/src/assets/styles/header.scss
@@ -5,19 +5,24 @@
   height: var(--header-h);
   width: 100%;
   padding: 0 80px;
-  display: flex;
-  align-content: center;
-  align-items: center;
-  justify-content: space-between;
-
-  background: rgba(26, 41, 65, 0.6);
+  
+  background: rgba(0, 0, 0, 0.3);
+  backdrop-filter: blur(20px);
   z-index: 100;
-  @include to(1440px) {
+  @include desktop {
     padding: 0 50px;
   }
-  @include to(992px) {
+  @include tabletLarge {
     padding: 0;
   }
+}
+  &-inner {
+    height: 100%;
+    display: flex;
+    align-content: center;
+    align-items: center;
+    justify-content: space-between; 
+    }
   &__logo {
     height: 160px;
     width: 160px;
@@ -32,12 +37,12 @@
       width: 100%;
       height: 100%;
     }
-    @include to(1440px) {
+    @include desktop {
       padding: 15px;
       height: 120px;
       width: 120px;
     }
-    @include to(992px) {
+    @include tabletLarge {
       order: -1;
       align-self: center;
       padding: 0;
@@ -46,12 +51,12 @@
       margin: 0 40px;
       background: none;
     }
-    @include to(767px) {
+    @include tablet {
       height: 55px;
       width: 180px;
       margin: 0 20px;
     }
-    @include to(576px) {
+    @include mobile {
       height: 36px;
       width: 115px;
       margin: 0 20px;
