--- a/src/assets/styles/header.scss
+++ b/src/assets/styles/header.scss
@@ -26,7 +26,7 @@
   &__left {
     display: flex;
     justify-content: flex-start;
-    width: 50%;
+    width: 40%;
 
   }
 
@@ -47,7 +47,7 @@
 
   &__right {
     display: flex;
-    width: 50%;
+    width: 60%;
     justify-content: space-between;
   }
 
@@ -95,6 +95,10 @@
 .call {
   display: flex;
   justify-content: space-between;
+  border-left: 1px solid $wc;
+  border-right: 1px solid $wc;
+  padding-left: 40px;
+  padding-right: 40px;
 
   &__phone{
     text-decoration: none;
