two sections added

--- a/src/assets/styles/assets/vars.scss
+++ b/src/assets/styles/assets/vars.scss
@@ -9,6 +9,8 @@ $textGrey: #676863;
 $textLight: #9A9F8C;
 $wc: #fff;
 $bc: #000;
+$adCol: #CECECE;
+$lightGrey: #E0E0E0;
 
 $mc: #1A2941;
 $bg: #FAFAFA;
