--- a/src/pug/layout/main.pug
+++ b/src/pug/layout/main.pug
@@ -47,17 +47,17 @@ html(lang="uk")
     include ../includes/loader.html
     // END LOADER
     // START POPUP MODAL
-    include ../includes/popup.pug
+    //- include ../includes/popup.pug
     // END POPUP MODAL
     // START MENU
-    include ../includes/menu.pug
+    //- include ../includes/menu.pug
     // END MENU
 
     // -------
     // -------
     // -------
     // -------
-    .toast-wrapper(data-toast-wrapper)
+    //- .toast-wrapper(data-toast-wrapper)
     // START HEADER
     block header
     // END HEADER
