--- a/src/assets/styles/assets/main-styles.scss
+++ b/src/assets/styles/assets/main-styles.scss
@@ -1,7 +1,7 @@
 .container {
-    padding: 0 100px;
+    width: 2000px;
+    padding: 0 110px;
     margin: 0 auto;
-    width: 100%;
 
     @include desktop {
         max-width: 1440px;
