--- a/src/assets/styles/assets/templates.scss
+++ b/src/assets/styles/assets/templates.scss
@@ -1,4 +1,5 @@
 @import './pages/about';
 @import './pages/contact';
 @import './pages/contacts';
-@import './pages/home';
+@import './pages/home-main';
+@import './pages/trasted-main';
