--- a/src/assets/styles/header.scss
+++ b/src/assets/styles/header.scss
@@ -4,7 +4,6 @@
   left: 0;
   height: var(--header-h);
   width: 100%;
-  padding: 0 80px;
   background: rgba(0, 0, 0, 0.3);
   backdrop-filter: blur(20px);
   z-index: 100;
@@ -16,6 +15,7 @@
   }
 
   &-inner {
+    max-width: 100%;
     height: 100%;
     display: flex;
     align-content: center;
@@ -25,14 +25,13 @@
 
   &__left {
     display: flex;
-    justify-content: flex-start;
-    width: 40%;
-
+    justify-content: space-between;
   }
 
   &-logo__svg {
     height: 50px;
     width: 134px;
+    margin-right: 138px;
   }
 
   &-burger__group {
@@ -47,7 +46,6 @@
 
   &__right {
     display: flex;
-    width: 60%;
     justify-content: space-between;
   }
 
@@ -62,9 +60,11 @@
     letter-spacing: 0.02em;
     text-transform: uppercase;
     color: $wc;
+    margin-right: 40px;
   }
 
   &__cam {
+    margin-left: 40px;
     width: 23px;
     height: 18px;
   }
@@ -73,6 +73,7 @@
   &__svg {
     height: 18px;
     width: 23px;
+    vertical-align: middle;
   }
 
   &__descr {
@@ -90,6 +91,7 @@
 .cam__svg {
   width: 23px;
   height: 18px;
+  vertical-align: middle;
 }
 
 .call {
