--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -1,34 +1,5 @@
 
 extends ../layout/main
-block variable
-  -
-    var title_page = 'home'
-    var id_page = 'flat-page'
-    var class_page = 'home'
-    var breadcrumbsBtn = 'filter'
-    var breadcrumbsSubitem = [
-      {
-        label: 'About',
-        link: pagesLink[0].about
-      }
-    ]
-    var slider = [{
-      img: 'slider/1.jpg',
-      title: 'Власна резиденція у місті',
-      url: 'about',
-      linkText: 'Обрати квартиру',
-    },{
-      img: 'slider/1.jpg',
-      title: 'Власна резиденція у місті2',
-      url: 'about',
-      linkText: 'Обрати квартиру',
-    },{
-      img: 'slider/1.jpg',
-      title: 'Власна резиденція у місті3',
-      url: 'about',
-      linkText: 'Обрати квартиру',
-    }]
-
 block meta
   title= 'Главная'
   meta(name='description', content='')
@@ -38,42 +9,15 @@ block scripts
   script(defer src='./assets/scripts/vendors.bundle.js')
   script(defer src='./assets/scripts/index.bundle.js')
   script(defer src='./assets/scripts/index.js')
-  script(defer src='./assets/scripts/libs.js')
-  script(defer src='./assets/scripts/header.js')
-  script(defer src='./assets/scripts/home.js')
-block content
-  //- include ../includes/breadcrumbs.pug
-  +svg('arrow')
-  section.home-section-0
-    .home-slider.js-slider
-      .gallery-slider
-        .gallery-slider__fixed-proportions-container
-          .gallery-slider__wrap.swiper-container
-            .swiper-wrapper
-              each sl in slider
-                  .swiper-slide.slide.link__white
-                      +img(sl.img)
-                      .slide__content(data-swiper-parallax="300" data-swiper-parallax-delay="600")
-                          .slide__title= sl.title
-                          a(href= sl.url data-swiper-parallax="500").slide__link.link
-                              span= sl.linkText
-                              .link__arrow
-                                  +svg('arrow')
-    .home-slider__arrows
-        .home-slider__arrow.home-slider__prev(data-prev)
-            +svg('arrow')
-        .home-slider__amount
-            span.home-slider__current.js-home-slider__current(data-current)
-            span /
-            span.home-slider__all.js-home-slider__all(data-total)
-        .home-slider__arrow.home-slider__next(data-next)
-            +svg('arrow')
 
-    .home-scroll
-        +svg('scroll')
+block header
+  include ../includes/header.pug
+block content
+  include ../includes/home-main.pug
+  include ../includes/trusted-main.pug
+
 
 block footer
   include ../includes/footer.pug
 
-block header
-  include ../includes/header.pug
+
