--- a/src/assets/styles/pages/trasted-main.scss
+++ b/src/assets/styles/pages/trasted-main.scss
@@ -43,7 +43,7 @@
     &__right {
         max-width: 50%;
         display: flex;
-        justify-content: flex-start;
+        justify-content: flex-startgit ;
         padding-left: 180px;
     }
 
