couple of blocks

--- a/src/assets/styles/assets/templates.scss
+++ b/src/assets/styles/assets/templates.scss
@@ -2,4 +2,6 @@
 @import './pages/contact';
 @import './pages/contacts';
 @import './pages/home-main';
+@import './pages/location-main';
+@import './pages/sale-main';
 @import './pages/trasted-main';
