--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -15,6 +15,9 @@ block header
 block content
   include ../includes/home-main.pug
   include ../includes/trusted-main.pug
+  include ../includes/sale-main.pug
+  include ../includes/location-main.pug
+
 
 
 block footer
