updates main page

--- a/src/assets/styles/assets/templates.scss
+++ b/src/assets/styles/assets/templates.scss
@@ -1,7 +1,11 @@
 @import './pages/about';
 @import './pages/contact';
 @import './pages/contacts';
+@import './pages/details-main';
+@import './pages/development-progress';
 @import './pages/home-main';
 @import './pages/location-main';
 @import './pages/sale-main';
+@import './pages/standard-btn';
 @import './pages/trasted-main';
+@import './pages/visual-main';
