--- a/src/assets/styles/assets/vars.scss
+++ b/src/assets/styles/assets/vars.scss
@@ -11,6 +11,9 @@ $wc: #fff;
 $bc: #000;
 $adCol: #CECECE;
 $lightGrey: #E0E0E0;
+$grey: #363636;
+$grey2: #676863;
+$greyBg: #F0F0F0;
 
 $mc: #1A2941;
 $bg: #FAFAFA;
