--- a/src/pug/includes/location-main.pug
+++ b/src/pug/includes/location-main.pug
@@ -7,43 +7,40 @@ section.location-main
       .location-bottom__right
         .animated-car 
         .progress-line__container
-          .progress-line    
+          .progress-line__inner    
             +svg('leaf')
             .progress-line__circles-wrap
               .progress-line__circle1
                 .progress-line__circle2
                   .progress-line__circle3
-            span Romankiv village
-          .progress-line    
+            span.progress-line__destination Romankiv village
+          .progress-line__inner    
             .progress-line__time 
               span.progress-line__time-digit 5
-              span.progress-line__time-minutes хв
-              span.progress-line__time-auto на авто
+              span.progress-line__time-minutes хв</br>на авто
             .progress-line__circles-wrap
               .progress-line__circle1
                 .progress-line__circle2
                   .progress-line__circle3
-            span Мегамаркет
-          .progress-line    
+            span.progress-line__destination Мегамаркет
+          .progress-line__inner    
             .progress-line__time 
               span.progress-line__time-digit 12
-              span.progress-line__time-minutes хв
-              span.progress-line__time-auto на авто
+              span.progress-line__time-minutes хв</br>на авто   
             .progress-line__circles-wrap
               .progress-line__circle1
                 .progress-line__circle2
                   .progress-line__circle3
-            span парк Феофанія
-          .progress-line    
+            span.progress-line__destination парк Феофанія
+          .progress-line__inner    
             .progress-line__time 
               span.progress-line__time-digit 20
-              span.progress-line__time-minutes хв
-              span.progress-line__time-auto на авто
+              span.progress-line__time-minutes хв</br>на авто
             .progress-line__circles-wrap
               .progress-line__circle1
-              .progress-line__circle2
-              .progress-line__circle3
-            span Київ
+               .progress-line__circle2
+                .progress-line__circle3
+            span.progress-line__destination Київ
         
         
         
