--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -17,6 +17,10 @@ block content
   include ../includes/trusted-main.pug
   include ../includes/sale-main.pug
   include ../includes/location-main.pug
+  include ../includes/visual-main.pug
+  include ../includes/development-progress.pug
+  include ../includes/details-main.pug
+  
 
 
 
