--- a/src/assets/styles/pages/location-main.scss
+++ b/src/assets/styles/pages/location-main.scss
@@ -16,6 +16,9 @@
     display: flex;
     justify-content: space-between;
     width: 100%;
+    align-items: center;
+    background: rgba(0, 0, 0, 0.3);
+    backdrop-filter: blur(5px);
 
     &__left {
         display: flex;
@@ -46,37 +49,107 @@
     }
 
     &__right {
-        width: auto;
+        width: 60%;
         display: flex;
+        justify-content: space-between;
+        padding-right: 110px;
     }
 }
 
 .progress-line {
-    display: flex;
-    flex-direction: column;
+    
+
+    &__container {
+        display: flex;
+        align-items: end;
+        width: 100%;
+        justify-content: space-between;
+    }
+
+    &__inner {
+        display: flex;
+        flex-direction: column;
+    }
+
+    &__inner svg {
+        width: 33px;
+        height: 41px;
+        margin-bottom: 46px;
+        margin-left: 8px;
+    }
+
+    &__time {
+        display: flex;
+        align-items: center;
+        margin-bottom: 40px;
+        margin-left: 10px;
+    }
+
+    &__time-digit {
+        font-family: $default-font;
+        font-style: normal;
+        font-weight: 500;
+        font-size: 48px;
+        line-height: 110%;
+        color: $wc;
+        margin-right: 14px;
+    }
+
+    &__time-minutes {
+        font-family: $default-font;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 15px;
+        line-height: 120%;
+        color: $wc;
+
+    }
+    
+
     &__circles-wrap {
         position: relative;
+        margin-bottom: 40px;
     }
 
     &__circle1 {
         position: relative;
-        width: 300px;
-        height: 300px;
-        background-color: red;
+        width: 50px;
+        height: 50px;
+        background-image:
+            linear-gradient( rgba(255,255,255,0.2), rgba(255,255,255,0.2)),
+            linear-gradient(black, black);
+        border-radius: 50%;
     }
 
     &__circle2 {
         transform: translate(25%, 25%);
-        width: 200px;
-        height: 200px;
-        background-color: green;
+        width: 35px;
+        height: 35px;
+        background-image:
+            linear-gradient(rgba(255,255,255,0.4), rgba(255,255,255,0.4)),
+            linear-gradient(black, black);
+        border-radius: 50%;
     }
 
-    &__circle2 {
+    &__circle3 {
         transform: translate(48%, 46%);
-        width: 100px;
-        height: 100px;
-        background-color: blue;
+        width: 17px;
+        height: 17px;
+        background-image:
+            linear-gradient( rgba(255,255,255,0.6), rgba(255,255,255,0.6)),
+            linear-gradient(black, black);
+        border-radius: 50%;
+    }
+
+    &__destination {
+        font-family: $default-font;
+        font-style: normal;
+        font-weight: 500;
+        font-size: 24px;
+        line-height: 120%;
+        color: $wc;
+
+
     }
 
 
