--- a/src/assets/styles/assets/templates.scss
+++ b/src/assets/styles/assets/templates.scss
@@ -1,5 +1,6 @@
 @import './pages/about';
 @import './pages/answers-main';
+@import './pages/calculator';
 @import './pages/conditions-main';
 @import './pages/construction-gallery';
 @import './pages/construction';
@@ -9,6 +10,7 @@
 @import './pages/development-progress';
 @import './pages/development-video';
 @import './pages/documents';
+@import './pages/form-popup';
 @import './pages/home-main';
 @import './pages/location-main';
 @import './pages/maps-main';
@@ -16,6 +18,7 @@
 @import './pages/news-single-page';
 @import './pages/news';
 @import './pages/questions-main';
+@import './pages/questions-popup';
 @import './pages/sale-main';
 @import './pages/standard-btn';
 @import './pages/trasted-main';
