--- a/src/assets/styles/header.scss
+++ b/src/assets/styles/header.scss
@@ -129,6 +129,7 @@
   width: 23px;
   height: 18px;
   vertical-align: middle;
+  fill: $wc;
   @include mobile {
     width: 16px;
     height: 13px;
