--- a/src/assets/styles/pages/documents.scss
+++ b/src/assets/styles/pages/documents.scss
@@ -182,6 +182,17 @@
         margin-top: 15px;
         margin-left: 86px;
     } 
+    .btn-arrow {
+        top: 22%;
+        left: 50%;
+        height: 20px;
+
+        svg {
+            height: 15px;
+        }
+
+    }
+    
 }
 
 .download-link {
