--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -8,38 +8,34 @@ block head
 block scripts
   script(defer src='./assets/scripts/vendors.bundle.js')
   script(defer src='./assets/scripts/index.bundle.js')
-  script(defer src='./assets/scripts/index.js')
   script(defer src='./assets/scripts/libs.js')
-  script(defer src='./assets/scripts/news-main.js')
-  script(defer src='./assets/scripts/header.js')
-  script(defer src='./assets/scripts/development-video.js')
-  script(defer src='./assets/scripts/answers-main.js')
-  script(defer src='./assets/scripts/location-main.js')
-  script(defer src='./assets/scripts/maps-main.js')
-  script(defer src='./assets/scripts/questions-main.js')
+  script(defer src='./assets/scripts/homepage.bundle.js')
   
 
 block header
   include ../includes/header.pug
   include ../includes/menu.pug
 block content
-  include ../includes/home-main.pug
-  include ../includes/trusted-main.pug
-  include ../includes/sale-main.pug
-  include ../includes/location-main.pug
-  include ../includes/maps-main.pug
-  include ../includes/visual-main.pug
-  include ../includes/development-video.pug
-  include ../includes/development-progress.pug
-  include ../includes/details-main.pug
-  include ../includes/conditions-main.pug
-  include ../includes/questions-main.pug
-  include ../includes/news-main.pug
-  include ../includes/answers-main.pug
+  include ../includes/homepage/home-main.pug
+  include ../includes/homepage/trusted-main.pug
+  include ../includes/homepage/sale-main.pug
+  include ../includes/homepage/location-main.pug
+  include ../includes/homepage/maps-main.pug
+  include ../includes/homepage/visual-main.pug
+  include ../includes/homepage/development-video.pug
+  include ../includes/homepage/development-progress.pug
+  include ../includes/homepage/details-main.pug
+  include ../includes/homepage/conditions-main.pug
+  include ../includes/homepage/questions-main.pug
+  include ../includes/homepage/news-main.pug
+  include ../includes/homepage/answers-main.pug
   
 
 block modal 
   include ../includes/questions-popup.pug
+  include ../includes/form-popup.pug
+  include ../includes/calculator.pug
+  
 
   
 
