--- a/src/pug/includes/homepage/development-video.pug
+++ b/src/pug/includes/homepage/development-video.pug
@@ -9,7 +9,14 @@ section.development-video-main
               +svg('arrow')
             .btn-circle
               +svg('circle')
-    .development-video-wrap
+    .development-video-wrap(data-settings=`[
+        {
+            "cameras": ["https://www.youtube.com/embed/JlMSABAtsAE", "https://www.youtube.com/embed/mif5r1CEbSw", "https://www.youtube.com/embed/kXrPIiyoEiY"]
+        },
+        {
+            "cameras": ["http://youtube.com/1", "http://youtube.com/2", "http://youtube.com/3"]
+        }
+    ]`)
       .development-video__ctr-wrap
         .development-video__ctr
           .development-video__pagination
@@ -23,42 +30,40 @@ section.development-video-main
       .swiper-container.development-video-thumbnails
         .swiper-wrapper.development-video-thumbnails__wrp
           .development-video-month__card-wrap.swiper-slide
-            a(href="#").development-video-month__card 
+            a(href="#" data-index="0").development-video-month__card 
               .development-video-month__card-img 
                 img(src="assets/images/construction1.png", alt="")
                 .development-video-month__card-text
                   span.development-video-month__card-title Грудень 
                   span.development-video-month__card-date 10.01.2022
           .development-video-month__card-wrap.swiper-slide
-            a(href="#").development-video-month__card 
+            a(href="#" data-index="1").development-video-month__card 
               .development-video-month__card-img
                 img(src="assets/images/construction2.png", alt="")
                 .development-video-month__card-text
                   span.development-video-month__card-title Листопад 
                   span.development-video-month__card-date 10.01.2022
           .development-video-month__card-wrap.swiper-slide
-            a(href="#").development-video-month__card 
+            a(href="#" data-index="2").development-video-month__card 
               .development-video-month__card-img 
                 img(src="assets/images/construction3.png", alt="")
                 .development-video-month__card-text
                   span.development-video-month__card-title Жовтень 
                   span.development-video-month__card-date 10.01.2022
           .development-video-month__card-wrap.swiper-slide
-            a(href="#").development-video-month__card 
+            a(href="#" data-index="3").development-video-month__card 
               .development-video-month__card-img 
                 img(src="assets/images/construction3.png", alt="")
                 .development-video-month__card-text
                   span.development-video-month__card-title Жовтень 
                   span.development-video-month__card-date 10.01.2022
-      .swiper-container.swiper-development-video
-        .swiper-wrapper.swiper-development-video__wrp
-            .swiper-slide
-              img(src="assets/images/gallery1.png", alt="").swiper-lazy
-              .swiper-lazy-preloader.swiper-lazy-preloader-white
-            .swiper-slide
-              img(src="assets/images/gallery2.png", alt="").swiper-lazy
-              .swiper-lazy-preloader.swiper-lazy-preloader-white
-            .swiper-slide
-              img(src="assets/images/gallery3.png", alt="").swiper-lazy
-              .swiper-lazy-preloader.swiper-lazy-preloader-white     
+      .development-video-container
+        .poster-image 
+          img(src="assets/images/development-video3.png", alt="")
+        iframe.development-video(src="" preload="none" autoplay="false" muted="" loop="" playsinline="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen) 
+      .camera-actions
+        button.camera-btn(data-index="0") Камера 1
+        button.camera-btn(data-index="1") Камера 2
+        button.camera-btn(data-index="2") Камера 3
+        
       
