--- a/src/pug/includes/homepage/questions-main.pug
+++ b/src/pug/includes/homepage/questions-main.pug
@@ -8,10 +8,8 @@ section.questions-main
       form(data-home-contact autocomplete="off").questions-form
         .form-field.form-field-input(data-field-input data-field-name data-status="field--inactive")
           input(type='text' name="name" placeholder="Ім’я").form-field__input
-          .input-message(data-input-message) Ім’я:*
         .form-field.disabled.form-field-input(data-field-input data-field-phone data-status="field--inactive")
-          input(type='text' name="phone").form-field__input
-          .input-message(data-input-message) Телефон:*
+          input(type='text' name="phone" placeholder="Телефон").form-field__input
         label.checkbox.checkbox-circular
           input(type="checkbox" name="checkbox-q" id="checkbox-q")
           span.checkbox-icon 
