--- a/src/pug/includes/homepage/conditions-main.pug
+++ b/src/pug/includes/homepage/conditions-main.pug
@@ -15,6 +15,7 @@ section#conditions.conditions-main
           .conditions-card-img
             img(src="assets/images/conditions1.png", alt="")
           .conditions-card-text 
+            .conditions-card-line
             h4.conditions-card__title Повна оплата 100%
             p.conditions-card__description Розстрочка можлива до 24 місяців с першим внеском не менше 50% . Розрахувати розстрочку ви можете в калькуляторі заповнючи поля.
       .conditions-card
@@ -22,6 +23,7 @@ section#conditions.conditions-main
           .conditions-card-img
             img(src="assets/images/conditions2.png", alt="")
           .conditions-card-text 
+            .conditions-card-line
             h4.conditions-card__title Розстрочка до 24 міс
             p.conditions-card__description Розстрочка можлива до 24 місяців с першим внеском не менше 50% . Розрахувати розстрочку ви можете в калькуляторі заповнючи поля.
       .conditions-card 
@@ -29,6 +31,7 @@ section#conditions.conditions-main
           .conditions-card-img
             img(src="assets/images/conditions3.png", alt="")
           .conditions-card-text 
+            .conditions-card-line
             h4.conditions-card__title Кредит на 9 років
             p.conditions-card__description Розстрочка можлива до 24 місяців с першим внеском не менше 50% . Розрахувати розстрочку ви можете в калькуляторі заповнючи поля.
 
